...
              processing={props.voiceProcessingState}
            />
          ) : (
            <>
              <TextInput
                ref={props.inputRef}
                testID="chat-input"
                style={props.styles.pillInput}
                value={props.message}
                onChangeText={props.setMessage}
                placeholder={props.placeholder}
                placeholderTextColor={props.colors.textMuted}
                multiline
...
